[gd_scene load_steps=7 format=3 uid="uid://drdva4t3w7na0"]

[ext_resource type="Script" path="res://menus/GameUI/game_over.gd" id="1_7gqty"]
[ext_resource type="Material" uid="uid://dw5ry2b5wv5ra" path="res://RogueFroggerAssets/RFAssets/shaders/blur.tres" id="2_87331"]
[ext_resource type="PackedScene" uid="uid://dfs4y1gaosswr" path="res://menus/GameUI/UI_Controls.tscn" id="3_dvw43"]

[sub_resource type="Animation" id="Animation_wqa0x"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blur:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_f5j0v"]
resource_name = "startpause"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("blur:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_we8tw"]
_data = {
"RESET": SubResource("Animation_wqa0x"),
"startpause": SubResource("Animation_f5j0v")
}

[node name="game_over" type="Control"]
process_mode = 3
top_level = true
z_index = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7gqty")

[node name="blur" type="ColorRect" parent="."]
material = ExtResource("2_87331")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="ColorRect" type="ColorRect" parent="CenterContainer"]
custom_minimum_size = Vector2(600, 600)
layout_mode = 2
color = Color(0.443137, 0.458824, 0.443137, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="game over" type="Label" parent="CenterContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 50
text = "GAME OVER!
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="CenterContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 50
text = "Score: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="Seed" type="Label" parent="CenterContainer/ColorRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_direction = 1
layout_mode = 2
size_flags_vertical = 6
theme_override_font_sizes/font_size = 50
text = "Seed: "
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="retry" type="Button" parent="CenterContainer/ColorRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(164, 164)
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../quit")
theme_override_font_sizes/font_size = 50
text = "Retry"

[node name="menu" type="Button" parent="CenterContainer/ColorRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(164, 164)
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Menu"

[node name="quit" type="Button" parent="CenterContainer/ColorRect/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(164, 164)
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_right = NodePath("../retry")
theme_override_font_sizes/font_size = 50
text = "Quit"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_we8tw")
}

[node name="UiControls" parent="." instance=ExtResource("3_dvw43")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_bottom = 0.0
offset_left = -375.125
offset_right = 249.875
offset_bottom = 200.0
grow_horizontal = 0
grow_vertical = 1
scale = Vector2(0.6, 0.6)

[node name="Navigate" parent="UiControls" index="0"]
alignment = 2

[node name="Accept" parent="UiControls" index="1"]
alignment = 2

[node name="Unpause" parent="UiControls" index="2"]
visible = false
alignment = 2

[node name="Cancel Selection" parent="UiControls" index="3"]
visible = false
alignment = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="CenterContainer/ColorRect/VBoxContainer/HBoxContainer/retry" to="." method="_on_retry_pressed"]
[connection signal="pressed" from="CenterContainer/ColorRect/VBoxContainer/HBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CenterContainer/ColorRect/VBoxContainer/HBoxContainer/quit" to="." method="_on_quit_pressed"]

[editable path="UiControls"]
